# GameChatServer

./: .gitignore  CMakeLists.txt  GameChatServer.cpp  GameChatServer.h
base/: CMakeLists.txt  message.md
base/include/: BasicParser.h  Config.h  Header.h  HiRedis.h  Request.h  Util.h
base/src/: BasicParser.cc  Config.cc  Header.cc  HiRedis.cc
bench/: Broadcast.cc  CMakeLists.txt  Login.cc  Online.cc  Signup.cc
chat/: CMakeLists.txt  Client.cc  Client.h  Lobby.cc  Lobby.h  Player.cc  Player.h  ProxyConnection.cc  ProxyConnection.h  chat.cc
client/: CMakeLists.txt  Client.cc
database/: CMakeLists.txt  DatabaseServer.cc  HiRedis.cc  HiRedis.h
database/bench/: bench.cc
database/include/: Parser.h
database/src/: DatabaseServer.cc  Parser.cc
lobby/: CMakeLists.txt  lobby.cc
proto/: message.pb.cc  message.pb.h  message.proto
proxy/: CMakeLists.txt  ProxyParser.cc  ProxyParser.h  ThreadEnvironment.cc  ThreadEnvironment.h  proxy.cc
